// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot with all features 1`] = `
<div>
  <div
    style="width: 100%; margin-bottom: 1rem;"
  >
    <label
      for="test-input"
      style="display: block; margin-bottom: 0.5rem; color: rgb(51, 65, 85); font-size: 0.875rem; font-weight: 500; position: relative;"
    >
      Username
      <span
        style="color: rgb(239, 68, 68); margin-left: 2px;"
      >
        *
      </span>
    </label>
    <input
      aria-invalid="true"
      aria-required="true"
      id="test-input"
      required=""
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; border: 2px solid #ef4444; font-size: 1rem; color: rgb(15, 23, 42); background-color: rgb(255, 255, 255); transition: all 150ms ease-in-out;"
      type="password"
      value=""
    />
    <div
      style="color: rgb(239, 68, 68); font-size: 0.875rem; margin-top: 0.5rem;"
    >
      This field is required
    </div>
  </div>
</div>
`;

exports[`Input matches snapshot with default props 1`] = `
<div>
  <div
    style="width: 100%; margin-bottom: 1rem;"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      id="test-input"
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; border: 2px solid #cbd5e1; font-size: 1rem; color: rgb(15, 23, 42); background-color: rgb(255, 255, 255); transition: all 150ms ease-in-out;"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input matches snapshot with error state 1`] = `
<div>
  <div
    style="width: 100%; margin-bottom: 1rem;"
  >
    <input
      aria-invalid="true"
      aria-required="false"
      id="test-input"
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; border: 2px solid #ef4444; font-size: 1rem; color: rgb(15, 23, 42); background-color: rgb(255, 255, 255); transition: all 150ms ease-in-out;"
      type="text"
      value=""
    />
    <div
      style="color: rgb(239, 68, 68); font-size: 0.875rem; margin-top: 0.5rem;"
    >
      This field is required
    </div>
  </div>
</div>
`;

exports[`Input matches snapshot with label and required indicator 1`] = `
<div>
  <div
    style="width: 100%; margin-bottom: 1rem;"
  >
    <label
      for="test-input"
      style="display: block; margin-bottom: 0.5rem; color: rgb(51, 65, 85); font-size: 0.875rem; font-weight: 500; position: relative;"
    >
      Username
      <span
        style="color: rgb(239, 68, 68); margin-left: 2px;"
      >
        *
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-required="true"
      id="test-input"
      required=""
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; border: 2px solid #cbd5e1; font-size: 1rem; color: rgb(15, 23, 42); background-color: rgb(255, 255, 255); transition: all 150ms ease-in-out;"
      type="text"
      value=""
    />
  </div>
</div>
`;
